<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_setup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/common_bg"
    tools:context="com.ryx.ryx.ui.activity.SetupActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="3px"
        android:background="@color/common_gray_line" />
    <com.neo.duan.ui.widget.ClickItemView2
        android:id="@+id/clv_change_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:leftText="@string/xinxi"
        app:leftTextColor="#333"
        app:rightTextColor="#666"
        tools:rightText="@string/xinxi" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/common_gray_line" />
    <com.neo.duan.ui.widget.ClickItemView2
        android:id="@+id/clv_change_renzheng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:leftText="@string/renzheng"
        app:leftTextColor="#333"
        app:rightTextColor="#666"
        tools:rightText="@string/renzheng" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/common_gray_line" />
    <com.neo.duan.ui.widget.ClickItemView2
        android:id="@+id/clv_change_genggai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:leftText="@string/genggaihaoma"
        app:leftTextColor="#333"
        app:rightTextColor="#666"
      />
    <include layout="@layout/layout_gray_line" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <include layout="@layout/layout_gray_line" />



    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/common_gray_line" />
    <com.neo.duan.ui.widget.ClickItemView2
        android:id="@+id/clv_change_denglu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:leftText="@string/xiugaidenglu"
        app:leftTextColor="#333"
        app:rightTextColor="#666"
        tools:rightText="@string/xinxi" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/common_gray_line" />
    <com.neo.duan.ui.widget.ClickItemView2
        android:id="@+id/clv_change_zhifu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:leftText="@string/xiugaizhifu"
        app:leftTextColor="#333"
        app:rightTextColor="#666"
        tools:rightText="@string/xinxi" />
    <include layout="@layout/layout_gray_line" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <include layout="@layout/layout_gray_line" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/common_gray_line" />
    <com.neo.duan.ui.widget.ClickItemView2
        android:id="@+id/clv_change_huancun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:leftText="@string/huancun"
        app:leftTextColor="#333"
        app:rightTextColor="#666"
        tools:rightText="@string/xinxi" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/common_gray_line" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:text="退出登录"
        android:textColor="@color/orange"
        android:textSize="@dimen/sp_14"
        android:gravity="center"
        />

</LinearLayout>
