<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/bg_color"
    tools:context="com.ryx.ryx.ui.fragment.base.BaseFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:background="@mipmap/my_bg"
                android:padding="@dimen/dp_16"
                android:gravity="center_vertical"
                android:layout_height="108dp">
                <com.neo.duan.ui.widget.app.XImageView
                    android:id="@+id/iv_portrait"
                    android:layout_width="@dimen/dp_60"
                    android:layout_height="@dimen/dp_60"
                    android:visibility="visible"
                    fresco:actualImageScaleType="focusCrop"
                    fresco:fadeDuration="300"
                    fresco:failureImage="@mipmap/ic_default_head"
                    fresco:failureImageScaleType="centerInside"
                    fresco:placeholderImage="@mipmap/ic_default_head"
                    fresco:placeholderImageScaleType="fitCenter"
                    fresco:retryImageScaleType="centerCrop"
                    fresco:roundAsCircle="true"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/iv_portrait"
                    android:layout_toEndOf="@+id/iv_portrait"
                    android:gravity="center_vertical"
                    android:layout_marginTop="@dimen/dp_25"
                    android:layout_marginLeft="@dimen/dp_10"
                    >

                <TextView
                    android:id="@+id/tv_not_logged"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="您还未登录"
                    android:textSize="@dimen/sp_12"
                    android:textColor="@color/white"
                    android:layout_centerVertical="true"
                    />
                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_14"
                    android:gravity="center"
                    android:background="@drawable/et_style"
                    android:text="  立即登录  "
                    android:layout_toRightOf="@+id/tv_not_logged"
                    android:layout_toEndOf="@+id/tv_not_logged"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginStart="@dimen/dp_10"
                  />
                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="注册"
                    android:textSize="@dimen/sp_12"
                    android:textColor="@color/white"
                    android:layout_toRightOf="@id/tv_login"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_14"
                  />
                </RelativeLayout>
            </RelativeLayout>
         <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <com.neo.duan.ui.widget.recyclerview.XRecyclerView
          android:id="@+id/rlv_share"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:overScrollMode="never"
          android:background="@color/common_white"/>

         </LinearLayout>
            <include layout="@layout/layout_gray_line" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <include layout="@layout/layout_gray_line" />


            <com.neo.duan.ui.widget.ClickItemView
                android:id="@+id/clv_daijingjuan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                app:leftIcon="@mipmap/daijinjuan_01"
                app:leftText="@string/daijinjuan"
                app:leftTextColor="#333"
                app:rightTextColor="#666"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginRight="@dimen/dp_25"
                android:background="@color/common_gray_line"/>
            <com.neo.duan.ui.widget.ClickItemView
            android:id="@+id/clv_dingdan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            app:leftIcon="@mipmap/dingdan_01"
            app:leftText="@string/dingdan"
            app:leftTextColor="#333"
            app:rightTextColor="#666"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                 android:layout_marginLeft="@dimen/dp_30"
                android:background="@color/common_gray_line"/>

            <com.neo.duan.ui.widget.ClickItemView
                android:id="@+id/clv_vip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                app:leftIcon="@mipmap/vipka_01"
                app:leftText="@string/vip"
                app:leftTextColor="#333"
                app:rightTextColor="#666"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/common_gray_line"/>
            <com.neo.duan.ui.widget.ClickItemView
                android:id="@+id/clv_tuiguang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                app:leftIcon="@mipmap/tuiguang_01"
                app:leftText="@string/tuiguang"
                app:leftTextColor="#333"
                app:rightTextColor="#666"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@color/common_gray_line"/>
            <com.neo.duan.ui.widget.ClickItemView
                android:id="@+id/clv_xiaoxi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                app:leftIcon="@mipmap/xiaoxi_01"
                app:leftText="@string/xiaoxi"
                app:leftTextColor="#333"
                app:rightTextColor="#666"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/common_gray_line"/>
            <com.neo.duan.ui.widget.ClickItemView
                android:id="@+id/clv_bangzhu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                app:leftIcon="@mipmap/bangzhu_01"
                app:leftText="@string/bangzhu"
                app:leftTextColor="#333"
                app:rightTextColor="#666"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="@dimen/dp_20"
                android:background="@color/common_gray_line"/>
            <com.neo.duan.ui.widget.ClickItemView
                android:id="@+id/clv_women"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                app:leftIcon="@mipmap/women_01"
                app:leftText="@string/women"
                app:leftTextColor="#333"
                app:rightTextColor="#666"/>


        </LinearLayout>
    </ScrollView>


</LinearLayout>
